Download war file as part of build process so docker hub build will work.

--- a/containers/oxywebauthor-dfst/linktest.html
+++ b/containers/oxywebauthor-dfst/linktest.html
@@ -5,8 +5,13 @@
   </head>
   <body>
     <p>Link to Integrator_admin.ditamap in the Thunderbird project:</p>
-    <p><a href="http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url:http%3A%2F%2Flocalhost%3A90%2Fekimber%2FThunderbird.git/master/Integrator_admin.ditamap"
+    <!--
+      http://localhost:90/ekimber/thunderbird/raw/master/Integrator_admin.ditamap
+      -->    
+    <p><a target="_oxygen" href="http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url=github%3A%2F%2Flocalhost%3A90%2Fekimber%2Fthunderbird%2Fraw%2Fmaster%2FIntegrator_admin.ditamap"
       >Edit Integrator_admin.ditamap</a></p>
+    <p>Link to DITA-OT docs on GitHub:</p>
+    <p><a target="_oxygen" href="https://www.oxygenxml.com/webapp-demo-aws/app/oxygen.html?url=github%3A%2F%2FgetFileContent%2Fdita-ot%2Fdocs%2Fdevelop%2Findex.dita&ditamap=github%3A%2F%2FgetFileContent%2Fdita-ot%2Fdocs%2Fdevelop%2Fuserguide-book.ditamap">userguide-book.ditamap</a></p>
     <!-- github//getFileList/master/Integrator_admin.ditamap -->
   </body>
 </html>
