Created dev version of docker-compose. Updated linktest and docs to reflect detail changes.

--- a/containers/oxywebauthor-dfst/linktest.html
+++ b/containers/oxywebauthor-dfst/linktest.html
@@ -25,14 +25,9 @@
       http://localhost:90/ekimber/thunderbird/master/en/key-use-description.dita
       
       http://localhost:90/ekimber/thunderbird/raw/master/en/key-use-description.dita
-      
-      George says this works:
-      http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url=github%3A%2F%2FgetFileList%2Fhttps%253A%252F%252Fgitlab.com%252Fdavidnind%252Fkoha-documentation/master/en-nz/topic-templates/t-template-task.dita
+
       -->    
     <p><a target="_oxygen" href="http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url=github%3A%2F%2FgetFileList%2Fhttp%253A%252F%252Fgitlab-dfst%252Fekimber%252Fthunderbird.git%2Fmaster%2FIntegrator_admin.ditamap"
-      >Edit key-use-description.dita [http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url=github%3A%2F%2FgetFileList%2Fhttp%253A%252F%252Fgitlab-dfst%252Fekimber%252Fthunderbird.git%2Fmaster%2FIntegrator_admin.ditamap]</a></p>
-    <p>Link to DITA-OT docs on GitHub:</p>
-    <p><a target="_oxygen" href="https://www.oxygenxml.com/webapp-demo-aws/app/oxygen.html?url=github%3A%2F%2FgetFileContent%2Fdita-ot%2Fdocs%2Fdevelop%2Findex.dita&ditamap=github%3A%2F%2FgetFileContent%2Fdita-ot%2Fdocs%2Fdevelop%2Fuserguide-book.ditamap">userguide-book.ditamap</a></p>
-    <!-- github//getFileList/master/Integrator_admin.ditamap -->
+      >Edit Integrator_admin.ditamap</a></p>
   </body>
 </html>
