Renamed "dfst" to "d4st" in all files.

--- a/containers/oxywebauthor-dfst/linktest.html
+++ b/containers/oxywebauthor-dfst/linktest.html
@@ -27,7 +27,7 @@
       http://localhost:90/ekimber/thunderbird/raw/master/en/key-use-description.dita
 
       -->    
-    <p><a target="_oxygen" href="http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url=github%3A%2F%2FgetFileList%2Fhttp%253A%252F%252Fgitlab-dfst%252Fekimber%252Fthunderbird.git%2Fmaster%2FIntegrator_admin.ditamap"
+    <p><a target="_oxygen" href="http://localhost:8080/oxygenxml-web-author/app/oxygen.html?url=github%3A%2F%2FgetFileList%2Fhttp%253A%252F%252Fgitlab-d4st%252Fekimber%252Fthunderbird.git%2Fmaster%2FIntegrator_admin.ditamap"
       >Edit Integrator_admin.ditamap</a></p>
   </body>
 </html>
